<resources>
    <string name="app_name">Volume Control</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="permissions_required">Permissions Required</string>
    <string name="grant_permission">Grant Permission</string>
    <string name="share_app">Share App</string>
    <string name="contact_us">Contact Me</string>
    <string name="github">GitHub</string>
    <string name="about_us">About Me</string>
    <string name="media_volume_name">Media</string>
    <string name="voice_call_volume_name">Voice Call</string>
    <string name="ringtone_volume_name">Ringtone</string>
    <string name="notification_volume_name">Notification</string>
    <string name="alarm_volume_name">Alarm</string>
    <string name="system_volume_name">System</string>
    <string name="media_volume_desc">Music, videos, games</string>
    <string name="voice_call_volume_desc">Speaker phone &amp; call audio</string>
    <string name="ringtone_volume_desc">Incoming call ringtone</string>
    <string name="notification_volume_desc">App notifications</string>
    <string name="alarm_volume_desc">Alarms and timers</string>
    <string name="system_volume_desc">System sounds</string>
    <string name="media_voip_volume_name">Media &amp; VoIP</string>
    <string name="media_voip_volume_desc">Music, videos, WhatsApp calls, Discord</string>
    <string name="phone_calls_volume_name">Phone Calls</string>
    <string name="phone_calls_volume_desc">Traditional cellular voice calls</string>
    <string name="voip_info_title">VoIP Call Volume</string>
    <string name="voip_info_description">For WhatsApp, Discord and Telegram calls, adjust the \'Media &amp; VoIP\' volume. On Android 12+, some apps may override system volume settings during calls.</string>
    <string name="default_percentage">50%</string>
    <string name="volume_slider_description">Volume slider</string>
    <string name="permission_warning_detailed">This app needs permission to modify audio settings. Some volume controls may not work without proper permissions.</string>
    <string name="app_version">Volume Control v1.0</string>
    <string name="developed_by">Developed by Shivam Raj</string>
    <string name="by">By Shivam Raj</string>
    <string name="app_description">A simple volume control app for devices with broken volume buttons. Perfect for adjusting all audio streams.</string>
    <string name="contact_links">Contact &amp; Links:</string>
    <string name="email_address">bettercallshiv@gmail.com</string>
    <string name="github_url">github.com/BetterCallShiv</string>
    <string name="ok_button">OK</string>
    <string name="github_button">GitHub</string>
    <string name="toolbar_title">Volume Control</string>
    <string name="share_app_subject">Volume Control App</string>
    <string name="share_app_text">Check out Volume Control!\n\nGitHub: https://github.com/BetterCallShiv/VolumeControl</string>
    <string name="share_app_chooser">Share Volume Control</string>
    <string name="contact_email_subject">Volume Control - Feedback</string>
    <string name="contact_email_body">Hi,\n\nI have some feedback about Volume Control App:\n\n</string>
    <string name="contact_email_chooser">Send Email</string>
    <string name="no_email_app_toast">No email app found.</string>
    <string name="github_full_url">https://github.com/BetterCallShiv</string>
    <string name="no_browser_toast">No browser found.</string>
    <string name="email_mailto">mailto:bettercallshiv@gmail.com</string>
</resources>
